# Survivant

./: .gitignore  CMakeLists.txt  README.md
CMake/: CopyResources.cmake
Dependencies/: CMakeLists.txt
Dependencies/Assimp/: CMakeLists.txt
Dependencies/GLAD/: CMakeLists.txt
Dependencies/GLAD/include/glad/: gl.h  glad.h
Dependencies/GLAD/src/: glad.c
Dependencies/GLFW/: CMakeLists.txt
Dependencies/IMGUI/: CMakeLists.txt
Dependencies/LibMath/: CMakeLists.txt
Dependencies/LibMath/LibMath/: CMakeLists.txt
Dependencies/LibMath/LibMath/Header/: Angle.h  Arithmetic.h  Arithmetic.inl  ERotationOrder.h  Interpolation.h  Matrix.h  Matrix4Vector4Operation.h  Quaternion.h  Quaternion.inl  Transform.h  Transform.inl  TransformNotifier.h  TransformNotifier.inl  Trigonometry.h  Trigonometry.inl  Vector.h
Dependencies/LibMath/LibMath/Header/Angle/: Degree.h  Degree.inl  Radian.h  Radian.inl
Dependencies/LibMath/LibMath/Header/Matrix/: Matrix2.h  Matrix2.inl  Matrix3.h  Matrix3.inl  Matrix4.h  Matrix4.inl  TMatrix.h  TMatrix.inl
Dependencies/LibMath/LibMath/Header/Vector/: Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
Dependencies/LibMath/LibMath_UnitTest/: CMakeLists.txt
Dependencies/LibMath/LibMath_UnitTest/Source/: Angle_UnitTest.cpp  Arithmetic_UnitTest.cpp  Main.cpp  Matrix_UnitTest.cpp  Quaternion_UnitTest.cpp  Transform_UnitTest.cpp  Trigonometry_UnitTest.cpp  Vector_UnitTest.cpp
Dependencies/SoLoud/: CMakeLists.txt
Docs/: CodingStandard.docx  CodingStandard.md  Documentation.docx  Documentation.md
Resources/: CMakeLists.txt
Resources/shaders/: BlinnPhong.glslh  Light.glslh  Lit.glsl  Unlit.frag  Unlit.glsl  Unlit.vert
Source/: CMakeLists.txt
Source/Editor/: CMakeLists.txt
Source/Engine/: CMakeLists.txt
Source/Engine/App/: CMakeLists.txt
Source/Engine/App/include/SurvivantApp/Inputs/: InputManager.h  InputType.h  InputTypeBase.h  KeyboardInputs.h  MouseInputs.h
Source/Engine/App/include/SurvivantApp/Inputs/InputSpecifiers/: EInputModifier.h  EKey.h  EMouseButtonState.h
Source/Engine/App/include/SurvivantApp/Windows/: Window.h
Source/Engine/App/src/Inputs/: InputManager.cpp
Source/Engine/App/src/Windows/: Window.cpp
Source/Engine/Audio/: CMakeLists.txt
Source/Engine/Core/: CMakeLists.txt
Source/Engine/Core/include/SurvivantCore/: TupleHasher.h
Source/Engine/Core/include/SurvivantCore/Debug/: Assertion.h  DebugBreak.h  Logger.h  Logger.inl
Source/Engine/Core/include/SurvivantCore/Events/: Event.h  EventBase.h  EventManager.h
Source/Engine/Core/include/SurvivantCore/Resources/: IResource.h
Source/Engine/Core/include/SurvivantCore/Utility/: FileSystem.h  LeanWindows.h  Timer.h  Utility.h  Utility.inl
Source/Engine/Core/src/Events/: EventManager.cpp
Source/Engine/Core/src/Utility/: FileSystem.cpp  Timer.cpp  Utility.cpp
Source/Engine/Physics/: CMakeLists.txt
Source/Engine/Rendering/: CMakeLists.txt
Source/Engine/Rendering/include/SurvivantRendering/Core/: Camera.h  Color.h  Light.h  Vertex.h  VertexArray.h  VertexAttributes.h
Source/Engine/Rendering/include/SurvivantRendering/Core/Buffers/: Buffer.h  FrameBuffer.h  IndexBuffer.h  ShaderStorageBuffer.h  ShaderStorageBuffer.inl  UniformBuffer.h  UniformBuffer.inl  VertexBuffer.h
Source/Engine/Rendering/include/SurvivantRendering/Enums/: EAccessMode.h  EAccessSpecifier.h  EBlendFactor.h  ECompareAlgorithm.h  ECullFace.h  EFrameBufferAttachment.h  ELightType.h  EPixelDataFormat.h  EPixelDataType.h  EPrimitiveType.h  ERenderingCapability.h  EShaderDataType.h  EShaderType.h  ETextureFilter.h  ETextureFormat.h  ETextureWrapMode.h
Source/Engine/Rendering/include/SurvivantRendering/Geometry/: BoundingBox.h  BoundingSphere.h  Frustum.h  Vertex.h
Source/Engine/Rendering/include/SurvivantRendering/RHI/: EGraphicsAPI.h  IFrameBuffer.h  IIndexBuffer.h  IRenderAPI.h  IRenderAPI.inl  IShader.h  IShaderStorageBuffer.h  IShaderStorageBuffer.inl  ITexture.h  IUniformBuffer.h  IUniformBuffer.inl  IVertexArray.h  IVertexBuffer.h
Source/Engine/Rendering/include/SurvivantRendering/RHI/OpenGL/: OpenGLAPI.h  OpenGLFrameBuffer.h  OpenGLIndexBuffer.h  OpenGLShader.h  OpenGLShaderStorageBuffer.h  OpenGLTexture.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
Source/Engine/Rendering/include/SurvivantRendering/Resources/: Material.h  Mesh.h  Model.h  Shader.h  Texture.h  TextureMinfilter.h  TextureWrapMode.h  texture.h
Source/Engine/Rendering/src/: texture.cpp
Source/Engine/Rendering/src/Core/: Camera.cpp  Color.cpp  Light.cpp  VertexArray.cpp  VertexAttributes.cpp
Source/Engine/Rendering/src/Core/Buffers/: Buffer.cpp  FrameBuffer.cpp  IndexBuffer.cpp  ShaderStorageBuffer.cpp  UniformBuffer.cpp  VertexBuffer.cpp
Source/Engine/Rendering/src/Geometry/: Frustum.cpp
Source/Engine/Rendering/src/RHI/: IFrameBuffer.cpp  IIndexBuffer.cpp  IRenderAPI.cpp  IShader.cpp  IShaderStorageBuffer.cpp  ITexture.cpp  IUniformBuffer.cpp  IVertexArray.cpp  IVertexBuffer.cpp
Source/Engine/Rendering/src/RHI/OpenGL/: OpenGLAPI.cpp  OpenGLFrameBuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLShader.cpp  OpenGLShaderStorageBuffer.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Source/Engine/Rendering/src/Resources/: Material.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  texture.cpp
Source/Engine/UI/: CMakeLists.txt
Source/Engine/UI/include/SurvivantUI/: EditorWindow.h  IMenuable.h  IPanelable.h  Menu.h  Panel.h  SubWindow.h  UI.h
Source/Engine/UI/src/: EditorWindow.cpp  Menu.cpp  Panel.cpp  SubWindow.cpp  UI.cpp
Source/Runtime/: CMakeLists.txt
Source/Test/: CMakeLists.txt
Source/Test/include/SurvivantTest/: EInputModifier.h  EKey.h  EKeyState.h  EMouseButton.h  EMouseButtonState.h  Event.h  EventBase.h  EventManager.h  IEvent.h  InputManager.h  InputType.h  TupleHasher.h  Window.h
Source/Test/src/: EventBase.cpp  EventManager.cpp  InputManager.cpp  InputType.cpp  InputTypeBase.cpp  TupleHasher.cpp  Window.cpp  main.cpp
