include(FetchContent)

# Setup output directories.
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/deps)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib/deps)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

# Add assimp
add_subdirectory(Assimp)

# Add GLAD
add_subdirectory(GLAD)

# Add GLFW
add_subdirectory(GLFW)

# Add IMGUI
add_subdirectory(IMGUI)

# Add LibMath
add_subdirectory(LibMath)

# Add PhysX (TODO)
# add_subdirectory(PhysX)

# Add SoLoud
add_subdirectory(SoLoud)

# Set shared variables
set(ASSIMP_NAME ${ASSIMP_NAME} PARENT_SCOPE)
set(ASSIMP_INCLUDE_DIR ${ASSIMP_INCLUDE_DIR} PARENT_SCOPE)

set(GLAD_NAME ${GLAD_NAME} PARENT_SCOPE)
set(GLAD_INCLUDE_DIR ${GLAD_INCLUDE_DIR} PARENT_SCOPE)

set(GLFW_NAME ${GLFW_NAME} PARENT_SCOPE)
set(GLFW_INCLUDE_DIR ${GLFW_INCLUDE_DIR} PARENT_SCOPE)

set(IMGUI_NAME ${IMGUI_NAME} PARENT_SCOPE)
set(IMGUI_INCLUDE_DIR ${IMGUI_INCLUDE_DIR} PARENT_SCOPE)

set(LIBMATH_NAME ${LIBMATH_NAME} PARENT_SCOPE)
set(LIBMATH_INCLUDE_DIR ${LIBMATH_INCLUDE_DIR} PARENT_SCOPE)

set(PHYSX_LIBS ${PHYSX_LIBRARIES} PARENT_SCOPE)
set(PHYSX_INCLUDE_DIR ${PHYSX_INCLUDE_DIR} PARENT_SCOPE)

set(SOLOUD_NAME ${SOLOUD_NAME} PARENT_SCOPE)
set(SOLOUD_INCLUDE_DIR ${SOLOUD_INCLUDE_DIR} PARENT_SCOPE)

set(STB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/STB PARENT_SCOPE)