# set target
get_filename_component(CURRENT_FOLDER_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
set(TARGET_NAME ${PROJECT_NAME}${CURRENT_FOLDER_NAME})

file(GLOB_RECURSE ASSETS_FILES ${SURVIVANT_ASSETS_DIR}/*)

add_library(${TARGET_NAME} INTERFACE ${ASSETS_FILES})

message(STATUS "Added ${TARGET_NAME} target with files: ${ASSETS_FILES}")